--- a/theme/static/css/dashboard.css
+++ b/theme/static/css/dashboard.css
@@ -89,3 +89,36 @@ the brief for the app
     max-width: 320px;
 }
 
+.get_started_cell {
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 10px;
+}
+
+.get_started_link {
+    font-size: 16px;
+    display: inline-block;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 10px;
+    width: 300px;
+    text-align: left;
+    border-radius: 10px;
+}
+
+/*
+if I use display: block, the hide can't hide
+the container. This need to be looked at.
+ */
+.test_container {
+    margin-left: 10px;
+    margin-right: 10px;
+    background: #FFFFFF;
+    border-radius: 4px;
+    border: solid 1px rgba(221, 221, 221, 3);
+    margin-bottom: 50px;
+    padding-botto: 50px;
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.16);
+}
