--- a/theme/static/css/dashboard.css
+++ b/theme/static/css/dashboard.css
@@ -6,8 +6,8 @@ Also hold the RA (recently accessed) table.
     background: #FFFFFF;
     border-radius: 4px;
     border: solid 1px rgba(221, 221, 221, .3);
-    margin-bottom: 50px;
-    padding-bottom: 50px;
+    margin-bottom: 30px;
+    padding-bottom: 20px;
     box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.16);
 }
 
@@ -41,7 +41,6 @@ the responsive web row
     margin-left: 0px;
 }
 
-
 /*
 container for app image
  */
@@ -55,6 +54,11 @@ container for app image
     float: left;
 }
 
+div.img-div > .img-circle {
+    margin-top: 10px;
+    border-radius: 50%;
+}
+
 /*
 app img icon
  */
@@ -64,10 +68,12 @@ app img icon
     vertical-align: center;
 }
 
+
 /*
 the title for the app
  */
 .app-text-block-header {
+    margin-top: 10px;
     margin-bottom: 10px;
 }
 
@@ -76,6 +82,7 @@ the brief for the app
  */
 .app-text-block {
     padding-left: 10px;
+    padding-right: 10px;
     display: inline-block;
     border-radius: 4px;
     border-top: solid 1px rgba(221, 221, 221, .3);
@@ -86,12 +93,15 @@ the brief for the app
 
 
 .app-text-block-brief {
+    width: 280px;
+    /*
     max-width: 320px;
+    */
 }
 
 .get_started_cell {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 0px;
+    margin-bottom: 5px;
     padding-left: 20px;
     padding-right: 20px;
     border-radius: 10px;
@@ -100,8 +110,8 @@ the brief for the app
 .get_started_link {
     font-size: 16px;
     display: inline-block;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     padding-left: 10px;
     width: 300px;
     text-align: left;
