Correct Links and Styles

--- a/theme/templates/includes/apps_block_title.html
+++ b/theme/templates/includes/apps_block_title.html
@@ -1,4 +1,4 @@
-<div class="row app-title-row">
+<div class="row dashboard_section_container_title_row">
             <span>
                 <h3 class="home-page-block-title">{{ whole_title }}</h3>
             </span>
