--- a/theme/static/css/dashboard.css
+++ b/theme/static/css/dashboard.css
@@ -1,6 +1,7 @@
 /*
 The box that holds all the apps
 Also hold the RA (recently accessed) table.
+It adds the light touch shadow
  */
 .dashboard_section_container {
     background: #FFFFFF;
@@ -17,8 +18,10 @@ the responsive row that holds the
 "Recently Accessed" and
 "CUAHSI-developed apps"
  */
-.app-title-row {
+.dashboard_section_container_title_row {
     margin-left: 20px;
+    margin-right: 2px;
+    margin-bottom: 10px;
 }
 
 /*
@@ -55,7 +58,8 @@ container for app image
 }
 
 div.img-div > .img-circle {
-    margin-top: 10px;
+    margin-top: 20px;
+    margin-left: 5px;
     border-radius: 50%;
 }
 
@@ -63,9 +67,8 @@ div.img-div > .img-circle {
 app img icon
  */
 .app-img {
-    width: 120px;
-    height: 120px;
-    vertical-align: center;
+    width: 100px;
+    height: 100px;
 }
 
 
@@ -118,17 +121,8 @@ the brief for the app
     border-radius: 10px;
 }
 
-/*
-if I use display: block, the hide can't hide
-the container. This need to be looked at.
- */
-.test_container {
-    margin-left: 10px;
-    margin-right: 10px;
-    background: #FFFFFF;
-    border-radius: 4px;
-    border: solid 1px rgba(221, 221, 221, 3);
-    margin-bottom: 50px;
-    padding-botto: 50px;
-    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.16);
+.get_started_toggle {
+    display: inline-block;
+    margin-top: 20px;
+    margin-right: 20px;
 }
