--- a/hs_core/templates/pages/my-resources.html
+++ b/hs_core/templates/pages/my-resources.html
@@ -104,22 +104,15 @@
                                                     <option value="collection resource">Collection</option>
                                                     <option value="composite resource">Composite Resource</option>
                                                     <option value="generic">Generic</option>
-                                                    <option value="geographic feature">Geographic Feature (ESRI
-                                                        Shapefiles)
-                                                    </option>
+                                                    <option value="geographic feature">Geographic Feature (ESRI Shapefiles)</option>
                                                     <option value="geographic raster">Geographic Raster</option>
-                                                    <option value="his referenced time series">HIS Referenced Time
-                                                        Series
-                                                    </option>
+                                                    <option value="his referenced time series">HIS Referenced Time Series</option>
                                                     <option value="model instance resource">Model Instance</option>
                                                     <option value="model program">Model Program</option>
-                                                    <option value="modflow model instance resource">MODFLOW Model
-                                                        Instance
-                                                    </option>
+                                                    <option value="modflow model instance resource">MODFLOW Model Instance</option>
                                                     <option value="multidimensional">Multidimensional (NetCDF)</option>
                                                     <option value="script resource">Script Resource</option>
-                                                    <option value="swat model instance resource">Swat Model Instance
-                                                    </option>
+                                                    <option value="swat model instance resource">Swat Model Instance</option>
                                                     <option value="time series">Time Series</option>
                                                     <option value="web app resource">Web App</option>
                                                 </select>
@@ -185,13 +178,13 @@
                     <th>Title</th>
                     <th>First Author</th>
                     <th>Date Created</th>
-                    <th>Last modified</th>
+                    <th>Last Modified</th>
                     <th>Subject</th>            {# Used in table processing #}
                     <th>Authors</th>            {# Used in table processing #}
                     <th>Permission Level</th>   {# Used in table processing #}
                     <th>Labels</th>             {# Used in table processing #}
                     <th>Favorite</th>           {# Used in table processing #}
-                    <th>Last modified</th>      {# Used in table processing #}
+                    <th>Last Modified</th>      {# Used in table processing #}
                     <th>Sharing Status</th>     {# Used in table processing #}
                     <th>Date Created</th>       {# Used in table processing #}
                 </tr>
