--- a/hs_core/templates/pages/collaborate.html
+++ b/hs_core/templates/pages/collaborate.html
@@ -195,8 +195,8 @@
                             {# Group Name #}
                             <fieldset class="col-sm-12">
                                 <label>Group Name *</label>
-                                <small class="text-muted">150 characters or less</small>
-                                <input class="form-control" required="required" name="name" maxlength="150">
+                                <small class="text-muted">79 characters or less</small>
+                                <textarea class="form-control" required="required" name="name" maxlength="79"></textarea>
                             </fieldset>
 
                             {# Purpose #}
