--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -1620,10 +1620,10 @@ body > .main-container {
 
 #invite-to-group .btn-add-access {
 	height: 34px;
-	width: 135px;
+	width: 160px;
 	top: 0;
 	border-radius: 0;
-	margin: 0 2px;
+	margin-top:15px;
 }
 
 .btn-default {
