--- a/theme/templates/pages/menus/dropdown.html
+++ b/theme/templates/pages/menus/dropdown.html
@@ -2,8 +2,8 @@
 {% spaceless %}
 
 <ul class="nav navbar-nav">
-    <li {% if request.path == "/dashboard/" %}class="active"{% endif %} id="dropdown-menu-home">
-        <a href="/dashboard/">Home</a>
+    <li {% if request.path == "/home/" %}class="active"{% endif %} id="dropdown-menu-home">
+        <a href="/home/">Home</a>
     </li>
     <li {% if request.path == "/my-resources/" %}class="active"{% endif %} id="dropdown-menu-my-resources">
         <a href="/my-resources/">My Resources</a>
