--- a/theme/templates/resource-landing-page/additional-metadata.html
+++ b/theme/templates/resource-landing-page/additional-metadata.html
@@ -1,5 +1,5 @@
 <!-- ========= EXTRA METADATA TAB ========= -->
-{% if resource_edit_mode or page.get_content_model.extra_metadata.items|length > 0 %}
+{% if resource_edit_mode or cm.extra_metadata.items %}
     <div class="col-xs-12 content-block">
         <h3>Additional Metadata
         {% if resource_edit_mode %}
@@ -19,7 +19,7 @@
             </tr>
             </thead>
             <tbody>
-            {% for extra_meta_name, extra_meta_value in page.get_content_model.extra_metadata.items %}
+            {% for extra_meta_name, extra_meta_value in cm.extra_metadata.items %}
                 <tr id="{{ forloop.counter0 }}">
                     <td>
                         {{ extra_meta_name }}
