--- a/theme/static/css/dashboard.css
+++ b/theme/static/css/dashboard.css
@@ -3,7 +3,7 @@ The box that holds all the apps
 Also hold the RA (recently accessed) table.
 It adds the light touch shadow
  */
-.dashboard_section_container {
+.dashboard-section-container {
     background: #FFFFFF;
     border-radius: 4px;
     border: solid 1px rgba(221, 221, 221, .3);
@@ -18,7 +18,7 @@ the responsive row that holds the
 "Recently Accessed" and
 "CUAHSI-developed apps"
  */
-.dashboard_section_container_title_row {
+.dashboard-section-container-title-row {
     margin-left: 20px;
     margin-right: 2px;
     margin-bottom: 10px;
@@ -99,7 +99,7 @@ the brief for the app
     width: 280px;
 }
 
-.get_started_cell {
+.get-started-cell {
     margin-top: 0px;
     margin-bottom: 5px;
     padding-left: 20px;
@@ -107,7 +107,7 @@ the brief for the app
     border-radius: 10px;
 }
 
-.get_started_link {
+.get-started-link {
     font-size: 16px;
     display: inline-block;
     padding-top: 10px;
@@ -118,7 +118,7 @@ the brief for the app
     border-radius: 10px;
 }
 
-.get_started_toggle {
+.get-started-toggle {
     display: inline-block;
     margin-top: 20px;
     margin-right: 20px;
