--- a/theme/templates/includes/big_image_button_app.html
+++ b/theme/templates/includes/big_image_button_app.html
@@ -1,6 +1,6 @@
 <div class="col-xs-12 col-md-6">
     <div class="img-div">
-        <img class="img-circle app-img" src="{{ app_image }}" alt="">
+        <img class="img-circle app-img" src="{{ STATIC_URL }}img/{{ app_image }}" alt="{{ app_image_alt }}">
     </div>
     <div class="app-text-block">
         <div class="app-text-block-header">
