--- a/theme/templates/pages/dashboard.html
+++ b/theme/templates/pages/dashboard.html
@@ -17,36 +17,34 @@ timestamp should go with a template tags to convert to a human readble day.
 {% endcomment %}
 
 {% block main %}
-    <div class="container  collapse dashboard_section_container" id="getStarted">
+    <div class="container  collapse dashboard-section-container" id="getStarted">
         {% trans "Getting Started" as whole_title %}
         {% include "includes/apps_block_title.html" %}
         <div id="row-1" class="row">
-            <div class="col-xs-12 col-sm-4  get_started_cell">
+            <div class="col-xs-12 col-sm-4  get-started-cell">
                 <a href="https://help.hydroshare.org/introduction-to-hydroshare/getting-started/"
-                   class="get_started_link">Check out tutorials</a>
+                   class="get-started-link">Learn to use HydroShare</a>
             </div>
-            <div class="col-xs-12 col-sm-4  get_started_cell">
-                <a href="/user/" class="get_started_link">Complete profile</a>
+            <div class="col-xs-12 col-sm-4  get-started-cell">
+                <a href="/user/" class="get-started-link">Complete profile</a>
             </div>
-            <div class="col-xs-12 col-sm-4  get_started_cell">
-                <a href="/search/" class="get_started_link">Browse data and models</a>
+            <div class="col-xs-12 col-sm-4  get-started-cell">
+                <a href="/search/" class="get-started-link">Browse data</a>
             </div>
         </div>
 
         <div id="row-2" class="row">
-            <div class="col-xs-12 col-sm-4 get_started_cell">
-                <a href="https://help.hydroshare.org/introduction-to-hydroshare/" class="get_started_link">How does
-                    HydroShare work</a>
+            <div class="col-xs-12 col-sm-4 get-started-cell">
+                <a href="https://help.hydroshare.org/introduction-to-hydroshare/" class="get-started-link">Introduction to HydroShare</a>
             </div>
-            <div class="col-xs-12 col-sm-4 get_started_cell">
+            <div class="col-xs-12 col-sm-4 get-started-cell">
                 <a href="https://help.hydroshare.org/introduction-to-hydroshare/getting-started/example-resources/"
-                   class="get_started_link">Review example resources
+                   class="get-started-link">Example resources
                 </a>
             </div>
-            <div class="col-xs-12 col-sm-4 get_started_cell">
+            <div class="col-xs-12 col-sm-4 get-started-cell">
                 <a href="https://help.hydroshare.org/about-hydroshare/releases/"
-                   class="get_started_link">What's
-                    new</a>
+                   class="get-started-link">Recent upgrades</a>
             </div>
         </div>
 
@@ -54,12 +52,12 @@ timestamp should go with a template tags to convert to a human readble day.
 
 
     <div>
-        <div class="container dashboard_section_container">
-            <div class="row dashboard_section_container_title_row">
+        <div class="container dashboard-section-container">
+            <div class="row dashboard-section-container-title-row">
                 <span>
                  <h3 class="home-page-block-title">Recently Visited </h3>
                     <span style="float: right">
-                    <a href="#" id="change_me" class="get_started_toggle" data-toggle="collapse"
+                    <a href="#" id="change_me" class="get-started-toggle" data-toggle="collapse"
                        data-target="#getStarted">Show get started</a>
                     </span>
                 </span>
@@ -102,19 +100,21 @@ timestamp should go with a template tags to convert to a human readble day.
             </table>
         </div>
 
-        <div class="container dashboard_section_container">
+        <div class="container dashboard-section-container">
             {% trans "Featured Apps" as whole_title %}
             {% include "includes/apps_block_title.html" %}
             <div class="row big-app-row">
                 {% trans "CUAHSI JupyterHub" as title_name %}
                 {% trans "https://jupyter.cuahsi.org" as title_url %}
-                {% trans "/static/img/jupiterhub.png" as app_image %}
+                {% trans "jupiterhub.png" as app_image %}
+                {% trans "Jupyter Hub App" as app_image_alt %}
                 {% trans "Use this app to launch HydroShare data in an online Python environment that uses JupyterHub software stack." as app_content %}
                 {% include "includes/big_image_button_app.html" %}
 
                 {% trans "National Water Model Forecast Viewer" as title_name %}
                 {% trans "https://hs-apps.hydroshare.org/apps/nwm-forecasts/" as title_url %}
-                {% trans "/static/img/nwm_forecasts.png" as app_image %}
+                {% trans "nwm_forecasts.png" as app_image %}
+                {% trans "National Water Model Forecast Viewer App" as app_image_alt %}
                 {% trans "Retrieve and preview National Water Model data." as app_content %}
                 {% include "includes/big_image_button_app.html" %}
             </div>
@@ -122,19 +122,21 @@ timestamp should go with a template tags to convert to a human readble day.
         </div>
 
         {# CUAHSI developed apps #}
-        <div class="container dashboard_section_container">
-            {% trans "Other CUAHSI Water Data Services" as whole_title %}
+        <div class="container dashboard-section-container">
+            {% trans "Additional CUAHSI Water Data Services" as whole_title %}
             {% include "includes/apps_block_title.html" %}
             <div class="row big-app-row">
                 {% trans "HydroClient" as title_name %}
                 {% trans "https://data.cuahsi.org" as title_url %}
-                {% trans "/static/img/hydro_client.png" as app_image %}
+                {% trans "hydro_client.png" as app_image %}
+                {% trans "CUAHSI hyrdoclient web app" as app_image_alt %}
                 {% trans "Explore and retrieve time series data from federal agencies, academic scientists, & volunteer monitoring organizations." as app_content %}
                 {% include "includes/big_image_button_app.html" %}
 
                 {% trans "Time Series Data Uploader" as title_name %}
                 {% trans "http://hydroserver.cuahsi.org" as title_url %}
-                {% trans "/static/img/hydro_server.png" as app_image %}
+                {% trans "hydro_server.png" as app_image %}
+                {% trans "CUAHSI data uploader for Time Series Data" as app_image_alt %}
                 {% trans "Share your time series data. Request a database and upload your formatted data to make it available in HydroClient." as app_content %}
                 {% include "includes/big_image_button_app.html" %}
             </div>
