--- a/theme/templates/accounts/profile.html
+++ b/theme/templates/accounts/profile.html
@@ -268,7 +268,7 @@
                             <div class="col-md-7">
                                 <div data-page-mode="on-edit-blur" class="panel panel-default">
                                     <div class="panel-heading">
-                                        <h3 class="panel-title"><span class="glyphicon glyphicon-time">&nbsp;</span>Recent activity</h3>
+                                        <h3 class="panel-title"><span class="glyphicon glyphicon-time">&nbsp;</span>Recent Activity</h3>
                                    </div>
                                     <div class="panel-body">
                                         {% if resources %}
