--- a/theme/templates/pages/menus/dropdown.html
+++ b/theme/templates/pages/menus/dropdown.html
@@ -6,11 +6,16 @@
         <a href="/my-resources/">My Resources</a>
     </li>
     <li class="dropdown res-dropdown">
-        <a id="select-resource-type" href="#" class="dropdown-toggle" data-toggle="dropdown"
-           {% if user.is_anonymous %}data-anonymous="true" {% endif %}
+        <a id="select-resource-type"
+           {% if user.is_anonymous %}
+           href="/accounts/login/?next=/my-resources"
+           {% else %}
+           href="#" data-toggle="dropdown"
+           {% endif %}
+           class="dropdown-toggle"
            role="button" aria-haspopup="true" aria-expanded="false">Create
-            <i class="fa fa-caret-down" aria-hidden="true"></i>
         </a>
+        {% if not user.is_anonymous %}
         <ul class="dropdown-menu" role="menu" aria-labelledby="select-resource-type">
             <li>
                 <a data-toggle="tooltip" data-placement="right"
@@ -76,6 +81,7 @@
                 </a>
             </li>
         </ul>
+        {% endif %}
     </li>
     <li {% if request.path == "/search/" %}class="active"{% endif %} id="dropdown-menu-search">
         <a href="/search/">Discover</a>
