get irods user creation and irods browser to honor oauth

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -511,6 +511,13 @@
                                                                     in to iRODS
                                                                 </a>
                                                             </li>
+                                                            <li id="btn-add-file-from-irods-user-space" data-toggle="modal"
+                                                                data-target="#irodsContent">
+                                                                <a>
+                                                                    <span class="glyphicon glyphicon-plus icon-blue"></span>&nbsp;&nbsp;Add
+                                                                    files from your iRODS user space
+                                                                </a>
+                                                            </li>
 
                                                             <li id="btn-select-irods-file" class="dz-clickable hidden"
                                                                 data-toggle="modal" data-target="#irodsContent">
