--- a/irods_browser_app/templates/irods_upload_add.html
+++ b/irods_browser_app/templates/irods_upload_add.html
@@ -11,7 +11,7 @@
                 <form class="form-signin" role="form" action="/irods/upload_add/" method="post">
                     <div class="modal-body">
                         {% csrf_token %}
-                        <input type="hidden" name="store" id="root_store" value=""/>
+                        <input type="hidden" name="store" id="root_store" value="{{ current_irods_store }}"/>
                         <input type="hidden" name="res_id" id="res_id" value="{{ cm.short_id }}"/>
                         <input type="hidden" id="irods-username" name="irods-username" value="">
                         <input type="hidden" id="irods-password" name="irods-password" value="">
